# multibootusb

./: CMakeLists.txt  README  README.md  SLKBUILD  maketxz.sh  update-translations.sh
doc/: AUTHORS
po/: Makefile  cmake_install.cmake  de.mo  de.po  el.mo  el.po  es.mo  es.po  fr.mo  fr.po  hi_IN.po  multibootusb.pot  pl.po  pt.mo  pt.po  ro.mo  ro.po  ru.mo  ru.po  sv.mo  sv.po
src/: CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.cmake  get_current_keybtype.sh  get_current_keymap.sh  get_current_zone.sh  get_system_locale.sh  init  keymaps  multibootusb  multibootusb-kde.desktop  multibootusb-kde.desktop.in  multibootusb-location-detection.sh  multibootusb.c  multibootusb.desktop  multibootusb.desktop.in  multibootusb.h  multibootusb.ui  multibootusb.ui~  multiple_iso_on_usb.sh  sli-locale_list-detection.sh
